fix: restore fetch message output format
It must match Acrobits specs
